--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,14 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.github.rtugeek:colorseekbar:1.7.7'
+    api 'io.github.dreierf:material-intro-screen:0.0.6'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.preference:preference:1.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
