--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,74 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.univ_smb.iut_acy.perrincl.garthicphone">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.CAMERA"  />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/pencil_pen_svgrepo_com"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GarthicPhone">
+
+        <activity
+            android:name=".GameJoinActivity"
+            android:theme="@style/Theme.GarthicPhone.ActionBar"
+            android:label="@string/join_party"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+        <activity
+            android:name=".GameStartSessionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DescribeDrawActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewGameActivity"
+            android:exported="false"
+            android:label="@string/create_party"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/Theme.GarthicPhone.ActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
+        <activity
+            android:name=".intro.IntroActivity"
+            android:theme="@style/Theme.Intro" />
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor"
+            android:theme="@style/Theme.GarthicPhone.ActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+
+                <category android:name="android.intent.category.PREFERENCE" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".RuleActivty"
+            android:exported="false"
+            android:theme="@style/Theme.GarthicPhone" />
+        <activity android:name=".GameActivity"
+            android:exported="false"
+            android:theme="@style/Theme.GarthicPhone" />
     </application>
 
 </manifest>
